# TelegramLearningBot

./: .gitignore  bot.py  pyproject.toml  requirments.txt  run.py  settings.py
app/: middlewares.py
app/database/: models.py  requests.py
app/exceptions/: middleware.py
app/handlers/: __init__.py  bot.py  cardmanage.py  cardmode.py  deckhub.py  handlers.py  start.py
app/handlers/bot/: __init__.py  help.py  start.py
app/handlers/cardmanage/: __init__.py  add_card_quick.py  create_update_delete.py  import_cards.py  show_cards.py
app/handlers/cardmode/: __init__.py  btn_first_letter.py  btn_scramble_letters.py  btn_similar_words.py  btns_set_rating.py  buttons_misc.py  cardmode_start.py  speech.py
app/handlers/deckhub/: __init__.py  cardmode_launcher.py  create_deck.py  deckdetails.py  decklist.py  delete_deck.py  manage_deck.py  rename_deck.py  reset_deck_stats.py
app/keyboards/: __init__.py  account_settings.py  cardmanage.py  cardmode.py  deckhub.py  keyboards.py  start.py
app/locales/: temporary
app/middlewares/: __init__.py  getting_started_tips.py  i18n_init.py  locales.py  middlewares.py
app/requests/: requests.py
app/services/: __init__.py  cardmode.py  deckhub.py  decorators.py  handlers.py  middleware.py  start.py  states.py  utils.py
app/services/bot/: __init__.py  account_settings.py  help.py  start.py
app/services/cardmanage/: __init__.py  create_update_delete.py  import_cards.py  show_cards.py
app/servise_messages/: __init__.py  en.py
app/utils/: __init__.py  cardmode.py  deckhub.py  decorators.py  locales.py  middleware.py  start.py  utils.py
app/validators/: validator.py
deployment_configs/: ankichat.conf  check_and_run.sh  gunicorn.conf.py  gunicorn_conf.py
(+22 files in other folders)
